--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>RGB (0–9) → HEX Converter</title>
+<title>RGB → HEX Converter</title>
 <style>
   :root{
     --bg:#0b0049;
